--- a/Carnes_lomito/nbproject/project.properties
+++ b/Carnes_lomito/nbproject/project.properties
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Carnes_lomito
-main.class=vista.Register_Form
+main.class=vista.Login_Form
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
